<resources>
    <string name="app_name">The Name Quiz</string>
    <string name="btnDb">See all names</string>
    <string name="btnQuiz">Play the quiz!</string>
    <string name="btnAdd">Add new names</string>
    <string name="btnRemove">Remove</string>
    <string name="btnFile">Pick a photo</string>
    <string name="btnCamera">Use camera</string>
    <string name="pickName">Enter name..</string>
    <string name="addPerson">Add person</string>
    <string name="yourScore">Your score</string>
    <string name="slash">/</string>
    <string name="zero">0</string>
    <string name="answer">Take a guess..</string>
    <string name="submit">Submit</string>
    <string name="restart">Play again</string>
    <string name="enterName">Enter your name..</string>
    <string name="prefKey">prefs</string>
    <string name="welcome">Welcome back %1$s!</string>
    <string name="changeUser">Change username</string>
    <string name="highscore">Highscores</string>
</resources>
