<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".QuizActivity">

    <ImageView
        android:id="@+id/imageViewGuess"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded"
        android:outlineProvider="background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/yourScore"
        android:textSize="20sp"
        android:textColor="@color/colorPurpleAccent"
        app:layout_constraintEnd_toStartOf="@+id/textScore"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        android:textColor="@color/colorPurpleAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textYour"
        app:layout_constraintEnd_toStartOf="@+id/textSlash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textYour" />

    <TextView
        android:id="@+id/textSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textSize="20sp"
        android:textColor="@color/colorPurpleAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textScore"
        app:layout_constraintEnd_toStartOf="@+id/textPersons"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textScore" />

    <TextView
        android:id="@+id/textPersons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        android:textColor="@color/colorPurpleAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textSlash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textSlash" />

    <EditText
        android:id="@+id/inputAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/answer"
        android:textColorHint="@color/colorPurple"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGuess" />

    <Button
        android:id="@+id/btnSubmit"
        android:background="@drawable/button_gradient"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorDarkestPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/submit"
        android:onClick="submitAnswer"
        android:drawableStart="@drawable/ic_whatshot_24dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAnswer" />

    <Button
        android:id="@+id/buttonRestart"
        android:background="@drawable/button_gradient"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorDarkestPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/restart"
        android:visibility="invisible"
        android:onClick="restart"
        android:drawableStart="@drawable/ic_restore_24dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAnswer" />

    <TextView
        android:id="@+id/textFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textYour" />
</androidx.constraintlayout.widget.ConstraintLayout>