<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button2"
        android:background="@drawable/button_gradient"
        android:padding="25dp"
        android:textColor="@color/colorDarkestPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openDbActivity"
        android:text="@string/btnDb"
        android:drawableStart="@drawable/ic_person_24dp"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:background="@drawable/button_gradient"
        android:padding="25dp"
        android:textColor="@color/colorDarkestPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openQuizActivity"
        android:text="@string/btnQuiz"
        android:drawableStart="@drawable/ic_games_24dp"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:background="@drawable/button_gradient"
        android:padding="25dp"
        android:textColor="@color/colorDarkestPurple"
        android:layout_height="wrap_content"
        android:onClick="openAddPersonActivity"
        android:text="@string/btnAdd"
        android:drawableStart="@drawable/ic_person_add_24dp"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>